# Problèmes injections "wind" dans table "/environment"
# Mofifications script "injections_odonates"

# Début script "injections_papillons"

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Tests_injections/extdata
 /Tests_injections/Igismap
 /Tests_injections/Campagne_odonate_V2.csv
+/Tests_injections/Campagne_odonate_V3_slashes.csv
