# No commit for specific files

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Tests_injections/Igismap
 /Tests_injections/Campagne_odonate_V2.csv
 /Tests_injections/Campagne_odonate_V3_slashes.csv
+/AGOLtoCOLEO/Tuto_Odonate_Papillon.mp4
+AGOLtoCOLEO/AGOL_data_1
